docs/0.19/_sources/api/gammapy.modeling.models.Models.rst.txt
Models
======

.. currentmodule:: gammapy.modeling.models

.. autoclass:: Models
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Models.covariance
      ~Models.frozen
      ~Models.names
      ~Models.parameters
      ~Models.parameters_unique_names
      ~Models.positions
      ~Models.wcs_geom

   .. rubric:: Methods Summary

   .. autosummary::

      ~Models.append
      ~Models.clear
      ~Models.copy
      ~Models.count
      ~Models.extend
      ~Models.freeze
      ~Models.from_dict
      ~Models.from_yaml
      ~Models.index
      ~Models.insert
      ~Models.plot_positions
      ~Models.plot_regions
      ~Models.pop
      ~Models.read
      ~Models.read_covariance
      ~Models.reassign
      ~Models.remove
      ~Models.restore_status
      ~Models.reverse
      ~Models.select
      ~Models.select_mask
      ~Models.select_region
      ~Models.selection_mask
      ~Models.set_parameters_bounds
      ~Models.to_dict
      ~Models.to_parameters_table
      ~Models.to_regions
      ~Models.to_template_sky_model
      ~Models.to_yaml
      ~Models.unfreeze
      ~Models.update_parameters_from_table
      ~Models.write
      ~Models.write_covariance

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: frozen
   .. autoattribute:: names
   .. autoattribute:: parameters
   .. autoattribute:: parameters_unique_names
   .. autoattribute:: positions
   .. autoattribute:: wcs_geom

   .. rubric:: Methods Documentation

   .. automethod:: append
   .. automethod:: clear
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: extend
   .. automethod:: freeze
   .. automethod:: from_dict
   .. automethod:: from_yaml
   .. automethod:: index
   .. automethod:: insert
   .. automethod:: plot_positions
   .. automethod:: plot_regions
   .. automethod:: pop
   .. automethod:: read
   .. automethod:: read_covariance
   .. automethod:: reassign
   .. automethod:: remove
   .. automethod:: restore_status
   .. automethod:: reverse
   .. automethod:: select
   .. automethod:: select_mask
   .. automethod:: select_region
   .. automethod:: selection_mask
   .. automethod:: set_parameters_bounds
   .. automethod:: to_dict
   .. automethod:: to_parameters_table
   .. automethod:: to_regions
   .. automethod:: to_template_sky_model
   .. automethod:: to_yaml
   .. automethod:: unfreeze
   .. automethod:: update_parameters_from_table
   .. automethod:: write
   .. automethod:: write_covariance
